force-app/main/default/objects/Sampling_Mapping__c/Sampling_Mapping__c.object-meta.xml
<CustomObject>
    <label>Sampling Mapping</label>
    <nameField>
        <displayFormat>M{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>出样等级映射表编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Mapping</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>