force-app/main/default/objects/Sampling_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>M002M</relationshipName>
    <type>Lookup</type>
</CustomField>