force-app/main/default/objects/Sampling_Mapping__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>出样等级+客户</description>
    <externalId>true</externalId>
    <label>外键</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>