force-app/main/default/objects/Sampling_Mapping__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>每个定番等级在每个客户中仅允许存在一条出样等级映射</inlineHelpText>
    <label>出样等级</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level</valueSetName>
    </valueSet>
</CustomField>