force-app/main/default/objects/Sampling_Mapping__c/fields/Shop_Level__c.field-meta.xml
<CustomField>
    <fullName>Shop_Level__c</fullName>
    <label>门店等级</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShopLevel</valueSetName>
    </valueSet>
</CustomField>