force-app/main/default/objects/Sampling_Mapping__c/validationRules/CannotEditLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEditLevel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISNEW()),OR(ISCHANGED(Level__c),ISCHANGED(Account__c)))</errorConditionFormula>
    <errorMessage>不可修改出样等级或客户</errorMessage>
</ValidationRule>