force-app/main/default/objects/Sampling_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Level__c</columns>
    <columns>Shop_Level__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>